[gd_scene load_steps=11 format=3 uid="uid://dhdq88so6g3yh"]

[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="1_dhni5"]
[ext_resource type="Script" uid="uid://cguhlue4ygu63" path="res://sources/gui/StatPanel.gd" id="2_v116i"]
[ext_resource type="Texture2D" uid="uid://lbbhr5w3jhrf" path="res://data/graphics/gui/stat/gender-female.png" id="3_4bqlt"]
[ext_resource type="PackedScene" uid="uid://coppbcrkvraoh" path="res://presets/gui/ProgressBar.tscn" id="3_kjg3f"]
[ext_resource type="Texture2D" uid="uid://3jqhykq3lnpt" path="res://data/graphics/gui/stat/spirit-hook.png" id="4_de8qp"]
[ext_resource type="Texture2D" uid="uid://dc0oen67nnoqp" path="res://data/graphics/gui/pixeldark.png" id="4_fxktc"]
[ext_resource type="Texture2D" uid="uid://bgmnxng3agmdr" path="res://data/graphics/gui/pixelbrown.png" id="6_2hq2a"]
[ext_resource type="Texture2D" uid="uid://nbo82cnov3wx" path="res://data/graphics/gui/pixelred.png" id="8_egmig"]
[ext_resource type="Texture2D" uid="uid://b1bm6d86bv1eq" path="res://data/graphics/gui/pixelblue.png" id="9_q6igb"]
[ext_resource type="Texture2D" uid="uid://b7vc8pr8rl30g" path="res://data/graphics/gui/pixelgreen.png" id="10_h4ygu"]

[node name="Stat" type="PanelContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(180, 100)
offset_right = 400.0
offset_bottom = 419.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_force_pass_scroll_events = false
theme = ExtResource("1_dhni5")
script = ExtResource("2_v116i")

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Scroll"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 7

[node name="Layout" type="HBoxContainer" parent="Scroll/Margin"]
layout_mode = 2

[node name="Stats" type="VBoxContainer" parent="Scroll/Margin/Layout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Information" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 0
text = "Test"

[node name="Gender" type="TextureRect" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_4bqlt")

[node name="Control" type="Control" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Level" type="Label" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
text = "Lvl. 2"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpiritSymbol" type="TextureRect" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("4_de8qp")

[node name="Spirit" type="Label" parent="Scroll/Margin/Layout/Stats/Information"]
layout_mode = 2
size_flags_horizontal = 8
horizontal_alignment = 2

[node name="HSeparator2" type="HSeparator" parent="Scroll/Margin/Layout/Stats"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatBox" type="VBoxContainer" parent="Scroll/Margin/Layout/Stats"]
layout_mode = 2

[node name="StrengthBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/StrengthBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Strength"

[node name="Current" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/StrengthBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minus" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/StrengthBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "-"

[node name="ToAdd" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/StrengthBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/StrengthBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "+"

[node name="VitalityBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/VitalityBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Vitality"

[node name="Current" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/VitalityBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minus" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/VitalityBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "-"

[node name="ToAdd" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/VitalityBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/VitalityBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "+"

[node name="AgilityBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/AgilityBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Agility"

[node name="Current" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/AgilityBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minus" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/AgilityBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "-"

[node name="ToAdd" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/AgilityBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/AgilityBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "+"

[node name="EnduranceBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Endurance"

[node name="Current" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minus" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "-"

[node name="ToAdd" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "+"

[node name="ConcentrationBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Concentration"

[node name="Current" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minus" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "-"

[node name="ToAdd" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2
vertical_alignment = 1

[node name="Button" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "+"

[node name="Control" type="Control" parent="Scroll/Margin/Layout/Stats/StatBox"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2

[node name="AvailablePointsBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/StatBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Available points"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox"]
custom_minimum_size = Vector2(59, 0)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetButton" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "Reset"

[node name="SaveButton" type="Button" parent="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
size_flags_horizontal = 10
text = "Save"

[node name="HSeparator" type="HSeparator" parent="Scroll/Margin/Layout/Stats"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PreciseStats" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats"]
layout_mode = 2

[node name="ActiveStatsBox" type="VBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ExperienceBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/ExperienceBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Experience"

[node name="ProgressBar" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/ExperienceBox" instance=ExtResource("3_kjg3f")]
layout_mode = 2
textureProgress = ExtResource("6_2hq2a")
textureBackground = ExtResource("4_fxktc")
labelColor = Color(0.843137, 0.717647, 0.482353, 1)
labelOffset = Vector2(0, -3)

[node name="HealthBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/HealthBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Health"

[node name="ProgressBar" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/HealthBox" instance=ExtResource("3_kjg3f")]
layout_mode = 2
textureProgress = ExtResource("8_egmig")
textureBackground = ExtResource("4_fxktc")
labelColor = Color(0.843137, 0.717647, 0.482353, 1)
labelOffset = Vector2(0, -3)

[node name="ManaBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/ManaBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mana"

[node name="ProgressBar" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/ManaBox" instance=ExtResource("3_kjg3f")]
layout_mode = 2
textureProgress = ExtResource("9_q6igb")
textureBackground = ExtResource("4_fxktc")
labelColor = Color(0.843137, 0.717647, 0.482353, 1)
labelOffset = Vector2(0, -3)

[node name="StaminaBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/StaminaBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stamina"

[node name="ProgressBar" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/StaminaBox" instance=ExtResource("3_kjg3f")]
layout_mode = 2
textureProgress = ExtResource("10_h4ygu")
textureBackground = ExtResource("4_fxktc")
labelColor = Color(0.843137, 0.717647, 0.482353, 1)
labelOffset = Vector2(0, -3)

[node name="WeightBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/WeightBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Weight"

[node name="ProgressBar" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/WeightBox" instance=ExtResource("3_kjg3f")]
layout_mode = 2
textureProgress = ExtResource("6_2hq2a")
textureBackground = ExtResource("4_fxktc")
labelColor = Color(0.843137, 0.717647, 0.482353, 1)
labelOffset = Vector2(0, -3)

[node name="GPBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox"]
layout_mode = 2

[node name="Label" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/GPBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Money"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/ActiveStatsBox/GPBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "0"
horizontal_alignment = 2

[node name="VSeparator" type="VSeparator" parent="Scroll/Margin/Layout/Stats/PreciseStats"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="AdvancedStatsBox" type="VBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AtkBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/AtkBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/AtkBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="DefBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/DefBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defense"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/DefBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="MAtkBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/MAtkBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "M. Attack"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/MAtkBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="MDefBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/MDefBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "M. Defense"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/MDefBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="AtkRangeBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/AtkRangeBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack Range"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/AtkRangeBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="CastDelayBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CastDelayBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cast Delay"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CastDelayBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="CooldownDelayBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CooldownDelayBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cooldown Delay"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CooldownDelayBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="CritRateBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CritRateBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Crit Rate"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/CritRateBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="DodgeRateBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/DodgeRateBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dodge Rate"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/DodgeRateBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="WalkBox" type="HBoxContainer" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox"]
layout_mode = 2

[node name="Name" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/WalkBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Walk Speed"

[node name="Value" type="Label" parent="Scroll/Margin/Layout/Stats/PreciseStats/AdvancedStatsBox/WalkBox"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/StrengthBox/Minus" to="." method="ReduceStrength"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/StrengthBox/Button" to="." method="IncreaseStrength"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/VitalityBox/Minus" to="." method="ReduceVitality"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/VitalityBox/Button" to="." method="IncreaseVitality"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/AgilityBox/Minus" to="." method="ReduceAgility"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/AgilityBox/Button" to="." method="IncreaseAgility"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox/Minus" to="." method="ReduceEndurance"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/EnduranceBox/Button" to="." method="IncreaseEndurance"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox/Minus" to="." method="ReduceConcentration"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/ConcentrationBox/Button" to="." method="IncreaseConcentration"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox/ResetButton" to="." method="ResetPanel"]
[connection signal="pressed" from="Scroll/Margin/Layout/Stats/StatBox/AvailablePointsBox/SaveButton" to="." method="SubmitAttributeUpdate"]
